--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -5,6 +5,10 @@ permissions:
 jobs:
   docs:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.9"]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
@@ -13,7 +17,7 @@ jobs:
           pip install poetry
       - name: Install dependencies
         run: |
-          poetry install
+          poetry install --no-interaction
       - name: Sphinx build
         run: |
           sphinx-build source _build
